Text overflow kinda solved

--- a/front_end_pay_devs/src/App.css
+++ b/front_end_pay_devs/src/App.css
@@ -299,6 +299,8 @@ box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.568);
   box-shadow: 1px 1px 1px ;
   height: 200px;
   margin-left: 245px;
+  white-space: nowrap;
+  overflow-x: auto;
 }
 
 .property {
